--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,9 @@
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
 
-# DataSource settings
-spring.datasource.url = jdbc:mysql://localhost:3306/zup
-spring.datasource.username = root
-spring.datasource.password =
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-# Show or not log for each sql query
-spring.jpa.show-sql = true
-
-# Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
